@@ -1,0 +1,3 @@
+#!/bin/sh
+
+sudo swupd bundle-add $*
