@@ -1,0 +1,227 @@
+<?xml version="1.0"?>
+<?xml-stylesheet type="text/xsl" href="xsl/pts-exdep-viewer.xsl" ?>
+<PhoronixTestSuite>
+	<ExternalDependencies>
+		<Information>
+			<Name>Clear Linux</Name>
+			<Aliases> </Aliases>
+			<PackageManager>swupd</PackageManager>
+		</Information>
+		<Package>
+			<GenericName>gtk-development</GenericName>
+			<PackageName>devpkg-gnome-desktop</PackageName>
+		</Package>
+		<Package>
+			<GenericName>sdl2-development</GenericName>
+			<PackageName>devpkg-SDL2</PackageName>
+		</Package>
+		<Package>
+			<GenericName>sdl-development</GenericName>
+			<PackageName>devpkg-SDL</PackageName>
+		</Package>
+		<Package>
+			<GenericName>vulkan-development</GenericName>
+			<PackageName>vulkan-utils libvulkan-dev</PackageName>
+		</Package>
+		<Package>
+			<GenericName>glut</GenericName>
+			<PackageName>devpkg-freeglut</PackageName>
+		</Package>
+		<Package>
+			<GenericName>libpng-development</GenericName>
+			<PackageName>devpkg-libpng</PackageName>
+		</Package>
+		<Package>
+			<GenericName>openssl-development</GenericName>
+			<PackageName>devpkg-openssl</PackageName>
+		</Package>
+		<Package>
+			<GenericName>build-utilities</GenericName>
+			<PackageName>c-basic</PackageName>
+		</Package>
+		<Package>
+			<GenericName>cairo-development</GenericName>
+			<PackageName>devpkg-cairo</PackageName>
+		</Package>
+		<Package>
+			<GenericName>xorg-development</GenericName>
+			<PackageName>devpkg-xorg-server</PackageName>
+		</Package>
+		<Package>
+			<GenericName>tiff</GenericName>
+			<PackageName>devpkg-tiff</PackageName>
+		</Package>
+		<Package>
+			<GenericName>bison</GenericName>
+			<PackageName>bison</PackageName>
+		</Package>
+		<Package>
+			<GenericName>flex</GenericName>
+			<PackageName>flex</PackageName>
+		</Package>
+		<Package>
+			<GenericName>java</GenericName>
+			<PackageName>java-basic</PackageName>
+		</Package>
+		<Package>
+			<GenericName>glew</GenericName>
+			<PackageName>devpkg-glew</PackageName>
+		</Package>
+		<Package>
+			<GenericName>bc</GenericName>
+			<PackageName>bc</PackageName>
+		</Package>
+		<Package>
+			<GenericName>scons</GenericName>
+			<PackageName>scons</PackageName>
+		</Package>
+		<Package>
+			<GenericName>smartmontools</GenericName>
+			<PackageName>smartmontools</PackageName>
+		</Package>
+		<Package>
+			<GenericName>zlib-development</GenericName>
+			<PackageName>devpkg-zlib</PackageName>
+		</Package>
+		<Package>
+			<GenericName>jpeg-development</GenericName>
+			<PackageName>devpkg-libjpeg-turbo</PackageName>
+		</Package>
+		<Package>
+			<GenericName>pcre</GenericName>
+			<PackageName>devpkg-pcre</PackageName>
+		</Package>
+		<Package>
+			<GenericName>perl</GenericName>
+			<PackageName>perl-basic perl-extras</PackageName>
+		</Package>
+		<Package>
+			<GenericName>vorbis-development</GenericName>
+			<PackageName>devpkg-libvorbis</PackageName>
+		</Package>
+		<Package>
+			<GenericName>qt5-development</GenericName>
+			<PackageName>qt-basic devpkg-qtbase</PackageName>
+		</Package>
+		<Package>
+			<GenericName>libevent</GenericName>
+			<PackageName>devpkg-libevent</PackageName>
+		</Package>
+		<Package>
+			<GenericName>ncurses-development</GenericName>
+			<PackageName>devpkg-ncurses</PackageName>
+		</Package>
+		<Package>
+			<GenericName>popt</GenericName>
+			<PackageName>devpkg-popt</PackageName>
+		</Package>
+		<Package>
+			<GenericName>numa-development</GenericName>
+			<PackageName>devpkg-numactl</PackageName>
+		</Package>
+		<Package>
+			<GenericName>curl</GenericName>
+			<PackageName>curl</PackageName>
+		</Package>
+		<Package>
+			<GenericName>fftw3-development</GenericName>
+			<PackageName>devpkg-fftw</PackageName>
+		</Package>
+		<Package>
+			<GenericName>blas-development</GenericName>
+			<PackageName>devpkg-openblas</PackageName>
+		</Package>
+		<Package>
+			<GenericName>openmpi-development</GenericName>
+			<PackageName>openmpi devpkg-openmpi</PackageName>
+		</Package>
+		<Package>
+			<GenericName>boost-development</GenericName>
+			<PackageName>devpkg-boost</PackageName>
+		</Package>
+		<Package>
+			<GenericName>bzip2-development</GenericName>
+			<PackageName>devpkg-bzip2</PackageName>
+		</Package>
+		<Package>
+			<GenericName>tcl</GenericName>
+			<PackageName>tcl-basic</PackageName>
+		</Package>
+		<Package>
+			<GenericName>rust</GenericName>
+			<PackageName>rust-basic</PackageName>
+		</Package>
+		<Package>
+			<GenericName>yasm</GenericName>
+			<PackageName>nasm</PackageName>
+		</Package>
+		<Package>
+			<GenericName>subversion</GenericName>
+			<PackageName>subversion</PackageName>
+		</Package>
+		<Package>
+			<GenericName>git</GenericName>
+			<PackageName>git</PackageName>
+		</Package>
+		<Package>
+			<GenericName>attr</GenericName>
+			<PackageName>devpkg-attr</PackageName>
+		</Package>
+		<Package>
+			<GenericName>httpd</GenericName>
+			<PackageName>httpd</PackageName>
+		</Package>
+                <Package>
+			<GenericName>golang</GenericName>
+			<PackageName>go-basic-dev</PackageName>
+		</Package>
+                <Package>
+			<GenericName>redis-server</GenericName>
+			<PackageName>redis-native</PackageName>
+		</Package>
+                <Package>
+			<GenericName>opencv</GenericName>
+			<PackageName>devpkg-opencv</PackageName>
+		</Package>
+		<Package>
+			<GenericName>python-scipy</GenericName>
+			<PackageName>python-data-science</PackageName>
+		</Package>
+		<Package>
+			<GenericName>python-sklearn</GenericName>
+			<PackageName>python-data-science</PackageName>
+		</Package>
+		<Package>
+			<GenericName>ruby</GenericName>
+			<PackageName>ruby-basic</PackageName>
+		</Package>
+		<Package>
+			<GenericName>gimp</GenericName>
+			<PackageName>gimp</PackageName>
+		</Package>
+		<Package>
+			<GenericName>darktable</GenericName>
+			<PackageName>darktable</PackageName>
+		</Package>
+		<Package>
+			<GenericName>node-npm</GenericName>
+			<PackageName>nodejs-basic</PackageName>
+		</Package>
+		<Package>
+			<GenericName>expat</GenericName>
+			<PackageName>devpkg-expat</PackageName>
+		</Package>
+		<Package>
+			<GenericName>libxml2</GenericName>
+			<PackageName>devpkg-libxml2</PackageName>
+		</Package>
+		<Package>
+			<GenericName>clang</GenericName>
+			<PackageName>devpkg-llvm llvm</PackageName>
+		</Package>
+		<Package>
+			<GenericName>gflags</GenericName>
+			<PackageName>devpkg-gflags</PackageName>
+		</Package>
+	</ExternalDependencies>
+</PhoronixTestSuite>
